# garage-secrets-controller

./: .env.example  .envrc.example  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  build.rs  compose.yaml
.github/workflows/: ci.yml
config/: garage.toml
scripts/: garage-status.sh  init-garage.sh  init-openbao.sh  seed-openbao.sh  test-smoke.sh
src/: build_info.rs  config.rs  error.rs  garage.rs  key_storage.rs  main.rs  model.rs  openbao.rs  reconciler.rs
src/garage/: tests.rs
src/openbao/: tests.rs
src/reconciler/: tests.rs
