[package]
license = "Apache-2.0"
name = "garage-secrets-controller"
description = "A controller for provisioning Garage S3 buckets, access keys, and grants from KMS/secret backends."
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
async-trait = "0.1"

[dev-dependencies]
http = "1"
